Fix hero new title, add autoplay to pillows on mobile

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1741,18 +1741,18 @@ header.site-header.header_divided_nav .site-header__mobile-nav > .site-header__i
 }
 @media screen and (max-width: 768px) {
   .hero_new .hero-new__content {
-    top: auto;
-    bottom: 8%;
+    top: 16%;
   }
 }
 .hero_new .hero-new__content h1 {
   text-align: center;
   font-family: "Playfair Display";
   font-size: 5rem;
+  text-transform: none;
 }
 @media screen and (max-width: 1135px) {
   .hero_new .hero-new__content h1 {
-    font-size: 4rem;
+    font-size: 4.3rem;
   }
 }
 
